k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridguard-db
spec:
  selector:
    matchLabels:
      app: gridguard-db
  template:
    metadata:
      labels:
        app: gridguard-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: gridguard-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: gridguard-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
